--- a/index.html
+++ b/index.html
@@ -181,16 +181,14 @@
                         </span>
 
                       <!-- Github link -->
-                      <!--
                       <span class="link-block">
-                        <a href="https://github.com/YOUR REPO HERE" target="_blank" class="external-link ">
+                        <a href="https://github.com/TencentARC/StereoCrafter" target="_blank" class="external-link ">
                         <span class="icon">
                           <i class="fab fa-github"></i>
                         </span>
                         <span>Code</span>
                       </a>
                       </span>
-                      -->
 
                     <!-- ArXiv abstract Link -->
                     <span class="link-block">
