--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8">
   <!-- Meta tags for social media banners, these should be filled in appropriatly as they are your "business card" -->
   <!-- Replace the content tag with appropriate information -->
-  <meta name="description" content="StereoCrafter: Diffusion-based Generation of Long and High-fidelity Stereoscopic 3D from Monocular Videos">
-  <meta property="og:title" content="StereoCrafter: Diffusion-based Generation of Long and High-fidelity Stereoscopic 3D from Monocular Videos"/>
-  <meta property="og:description" content="StereoCrafter: Diffusion-based Generation of Long and High-fidelity Stereoscopic 3D from Monocular Videos"/>
+  <meta name="description" content="SpatialDreamer: Self-supervised Stereo Video Synthesis from Monocular Input">
+  <meta property="og:title" content="SpatialDreamer: Self-supervised Stereo Video Synthesis from Monocular Input"/>
+  <meta property="og:description" content="SpatialDreamer: Self-supervised Stereo Video Synthesis from Monocular Input"/>
   <meta property="og:url" content="stereocrafter.github.io"/>
   <!-- Path to banner image, should be in the path listed below. Optimal dimenssions are 1200X630-->
   <meta property="og:image" content="static/image/your_banner_image.png" />
@@ -14,13 +14,13 @@
   <meta property="og:image:height" content="630"/>
 
 
-  <meta name="twitter:title" content="StereoCrafter: Diffusion-based Generation of Long and High-fidelity Stereoscopic 3D from Monocular Videos">
-  <meta name="twitter:description" content="StereoCrafter: Diffusion-based Generation of Long and High-fidelity Stereoscopic 3D from Monocular Videos">
+  <meta name="twitter:title" content="SpatialDreamer: Self-supervised Stereo Video Synthesis from Monocular Input">
+  <meta name="twitter:description" content="SpatialDreamer: Self-supervised Stereo Video Synthesis from Monocular Input">
   <!-- Path to banner image, should be in the path listed below. Optimal dimenssions are 1200X600-->
   <meta name="twitter:image" content="static/images/your_twitter_banner_image.png">
   <meta name="twitter:card" content="summary_large_image">
   <!-- Keywords for your paper to be indexed by-->
-  <meta name="keywords" content="StereoCrafter: Diffusion-based Generation of Long and High-fidelity Stereoscopic 3D from Monocular Videos">
+  <meta name="keywords" content="SpatialDreamer: Self-supervised Stereo Video Synthesis from Monocular Input">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
@@ -684,9 +684,9 @@
       <div class="container is-max-desktop">
         <h2 class="title is-2">Citations</h2>
         <pre><code>@article{zhao2024stereocrafter,
-            author      = {Zhao, Sijie and Hu, Wenbo and Cun, Xiaodong and Zhang, Yong and Li, Xiaoyu and Kong, Zhe and Gao, Xiangjun and Niu, Muyao and Shan, Ying},
-            title       = {StereoCrafter: Diffusion-based Generation of Long and High-fidelity Stereoscopic 3D from Monocular Videos},
-            journal     = {arXiv preprint arXiv:2409.07447},
+            author      = {Zhen Lv, Yangqi Long, Congzhentao Huang, Cao Li, Chengfei Lv<sup>*</sup>, Hao Ren Dian Zheng },
+            title       = {SpatialDreamer: Self-supervised Stereo Video Synthesis from Monocular Input},
+            journal     = {arXiv preprint arXiv:2411.11934},
             year        = {2024}
            }</code></pre>
         <p style="color: black; margin-top: 50px">
