--- a/index.html
+++ b/index.html
@@ -683,7 +683,7 @@
       <div class="hero-body">
       <div class="container is-max-desktop">
         <h2 class="title is-2">Citations</h2>
-        <pre><code>@article{zhao2024stereocrafter,
+        <pre><code>@article{lv2024spatialdreamerselfsupervisedstereovideo,
             author      = {Zhen Lv, Yangqi Long, Congzhentao Huang, Cao Li, Chengfei Lv<sup>*</sup>, Hao Ren Dian Zheng },
             title       = {SpatialDreamer: Self-supervised Stereo Video Synthesis from Monocular Input},
             journal     = {arXiv preprint arXiv:2411.11934},
@@ -699,7 +699,6 @@
     </div>
 
   </div>
-
 
 
   <footer class="footer">
