--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@
       <div class="container is-max-desktop">
         <h2 class="title is-2">Citations</h2>
         <pre><code>@article{lv2024spatialdreamerselfsupervisedstereovideo,
-            author      = {Zhen Lv, Yangqi Long, Congzhentao Huang, Cao Li, Chengfei Lv<sup>*</sup>, Hao Ren Dian Zheng },
+            author      = {Zhen Lv, Yangqi Long, Congzhentao Huang, Cao Li, Chengfei Lv<sup>*</sup>, Hao Ren and Dian Zheng},
             title       = {SpatialDreamer: Self-supervised Stereo Video Synthesis from Monocular Input},
             journal     = {arXiv preprint arXiv:2411.11934},
             year        = {2024}
