--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
               <!-- <span style="text-shadow: 10px 0px 5px blue;"> -->
                 <!-- <span style="color:red;opacity:0.5">StereoCrafter:</span> -->
               <!-- </span> -->
-                 Diffusion-based Generation of Long and High-fidelity Stereoscopic 3D from Monocular Videos
+                 SpatialDreamer: Self-supervised Stereo Video Synthesis from Monocular Input
             </h1>
             <div class="columns is-centered">
               <div class="column has-text-centered">
@@ -138,15 +138,19 @@
                   <!-- Paper authors -->
                    <br/>
                   <span class="author-block">
-                    <a href="https://scholar.google.com/citations?user=tZ3dS3MAAAAJ&hl=en" target="_blank">Sijie Zhao</a><sup>*</sup></span>
+                    <a href="https://scholar.google.com.hk/citations?user=x38N1hcAAAAJ&hl=en" target="_blank">Zhen Lv</a></span>
                     <span class="author-block">
-                      <a href="https://wbhu.github.io/" target="_blank">Wenbo Hu</a><sup>*</sup></span>
+                      <a target="_blank">Yangqi Long</a><sup>*</sup></span>
                       <span class="author-block">
-                        <a href="https://vinthony.github.io/" target="_blank">Xiaodong Cun</a><sup>*</sup></span>
+                        <a target="_blank">Congzhentao Huang</a></span>
                       <span class="author-block">
-                          <a href="https://yzhang2016.github.io/" target="_blank">Yong Zhang</a><sup>#</sup></span>
+                          <a target="_blank">Cao Li</a></span>
                       <span class="author-block">
-                            <a href="https://xiaoyu258.github.io/" target="_blank">Xiaoyu Li</a><sup>#</sup></span>
+                            <a target="_blank">Chengfei Lv</a><sup>*</sup></span>
+                     <span class="author-block">
+                            <a target="_blank">Hao Ren</a></span>
+                     <span class="author-block">
+                            <a target="_blank">Dian Zheng</a></span>
                       <br>
                       <span class="author-block">
                         <a href="https://scholar.google.com/citations?user=4X3yLwsAAAAJ&hl=zh-CN" target="_blank">Zhe Kong</a></span>
