--- a/index.html
+++ b/index.html
@@ -152,14 +152,14 @@
                      <span class="author-block">
                             <a target="_blank">Dian Zheng</a></span>
                       <br>
-                      <span class="author-block">
+<!--                       <span class="author-block">
                         <a href="https://scholar.google.com/citations?user=4X3yLwsAAAAJ&hl=zh-CN" target="_blank">Zhe Kong</a></span>
                         <span class="author-block">
                           <a href="https://scholar.google.com/citations?user=qgdesEcAAAAJ&hl=en" target="_blank">Xiangjun Gao</a></span>
                           <span class="author-block">
                             <a href="https://myniuuu.github.io/" target="_blank">Muyao Niu</a></span>
                           <span class="author-block">
-                              <a href="https://scholar.google.com/citations?user=4oXBp9UAAAAJ&hl=en" target="_blank">Ying Shan</a></span>
+                              <a href="https://scholar.google.com/citations?user=4oXBp9UAAAAJ&hl=en" target="_blank">Ying Shan</a></span> -->
                           </div>
 
                       <br/>
