--- a/index.html
+++ b/index.html
@@ -140,28 +140,20 @@
                   <span class="author-block">
                     <a href="https://scholar.google.com.hk/citations?user=x38N1hcAAAAJ&hl=en" target="_blank">Zhen Lv</a></span>
                     <span class="author-block">
-                      <a target="_blank">Yangqi Long</a><sup>*</sup></span>
+                      <a target="_blank">Yangqi Long</a></span>
                       <span class="author-block">
                         <a target="_blank">Congzhentao Huang</a></span>
                       <span class="author-block">
                           <a target="_blank">Cao Li</a></span>
                       <span class="author-block">
                             <a target="_blank">Chengfei Lv</a><sup>*</sup></span>
-                     <span class="author-block">
-                            <a target="_blank">Hao Ren</a></span>
-                     <span class="author-block">
-                            <a target="_blank">Dian Zheng</a></span>
-                      <br>
-<!--                       <span class="author-block">
-                        <a href="https://scholar.google.com/citations?user=4X3yLwsAAAAJ&hl=zh-CN" target="_blank">Zhe Kong</a></span>
-                        <span class="author-block">
-                          <a href="https://scholar.google.com/citations?user=qgdesEcAAAAJ&hl=en" target="_blank">Xiangjun Gao</a></span>
-                          <span class="author-block">
-                            <a href="https://myniuuu.github.io/" target="_blank">Muyao Niu</a></span>
-                          <span class="author-block">
-                              <a href="https://scholar.google.com/citations?user=4oXBp9UAAAAJ&hl=en" target="_blank">Ying Shan</a></span> -->
-                          </div>
 
+                      <br>
+                      <span class="author-block">
+                            <a target="_blank">Hao Ren</a></span>
+                      <span class="author-block">
+                            <a target="_blank">Dian Zheng</a></span>
+                      </div>
                       <br/>
 
 
