--- a/index.html
+++ b/index.html
@@ -152,14 +152,14 @@
                       <span class="author-block">
                             <a target="_blank">Hao Ren</a></span>
                       <span class="author-block">
-                            <a target="_blank">Dian Zheng</a></span>
+                            <a  href="https://zhengdian1.github.io/"  target="_blank">Dian Zheng</a></span>
                       </div>
                       <br/>
 
 
-
                       <div class="publication-authors">
-                        <span class="author-block" style="font-size: 30px;">Tencent AI Lab &nbsp &nbsp &nbsp ARC Lab, Tencent PCG</span>
+<!--                         <span class="author-block" style="font-size: 30px;">Tencent AI Lab &nbsp &nbsp &nbsp ARC Lab, Tencent PCG</span> -->
+                             <span class="author-block" style="font-size: 30px;">Alibaba Group</span>                  
                         <!-- <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span> -->
                       </div>
                       <br/>
