--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
         <div class="myVideo-overlap">
         </div>
         <video class="myVideo" loop muted data-autoplay playsinline>
-          <source src="static/videos/anaglyph3D.mp4" type="video/mp4">
-          <source src="imgs/flowers.webm" type="video/webm">
+          <source src="static/videos/sbs_435762914968_new_2600.mp4" type="video/mp4">
+<!--           <source src="imgs/flowers.webm" type="video/webm"> -->
         </video>
 
         <div class="hero-body" style="position:relative; z-index: 999">
