--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
             <img width="55%" style="display: block; margin:0 auto" src="static/images/logo.png"/>
             <h1 class="is-1 publication-title" style="text-align: center;">
               <!-- <span style="text-shadow: 10px 0px 5px blue;"> -->
-                <!-- <span style="color:red;opacity:0.5">StereoCrafter:</span> -->
+                <!-- <span style="color:red;opacity:0.5">SpatialDreamer:</span> -->
               <!-- </span> -->
-                 SpatialDreamer: Self-supervised Stereo Video Synthesis from Monocular Input
+                 Self-supervised Stereo Video Synthesis from Monocular Input
             </h1>
             <div class="columns is-centered">
               <div class="column has-text-centered">
