--- a/index.html
+++ b/index.html
@@ -125,11 +125,11 @@
 
         <div class="hero-body" style="position:relative; z-index: 999">
           <div class="container">
-            <img width="55%" style="display: block; margin:0 auto" src="static/images/logo.png"/>
+<!--             <img width="55%" style="display: block; margin:0 auto" src="static/images/logo.png"/> -->
             <h1 class="is-1 publication-title" style="text-align: center;">
-              <!-- <span style="text-shadow: 10px 0px 5px blue;"> -->
-                <!-- <span style="color:red;opacity:0.5">SpatialDreamer:</span> -->
-              <!-- </span> -->
+               <span style="text-shadow: 10px 0px 5px blue;"> 
+                 <span style="color:red;opacity:0.5">SpatialDreamer:</span>
+               </span> 
                  Self-supervised Stereo Video Synthesis from Monocular Input
             </h1>
             <div class="columns is-centered">
