--- a/index.html
+++ b/index.html
@@ -127,9 +127,10 @@
           <div class="container">
 <!--             <img width="55%" style="display: block; margin:0 auto" src="static/images/logo.png"/> -->
             <h1 class="is-1 publication-title" style="text-align: center;">
-               <span style="text-shadow: 10px 0px 5px blue;"> 
+               <span style="text-shadow: 10px 0px 5px blue;font-size: 150%;"> 
                  <span style="color:red;opacity:0.5">SpatialDreamer:</span>
                </span> 
+                <br>
                  Self-supervised Stereo Video Synthesis from Monocular Input
             </h1>
             <div class="columns is-centered">
