--- a/index.html
+++ b/index.html
@@ -233,12 +233,12 @@
         <div class="hero-body" >
         <div class="container">
           <h2 class="title is-2">Overall Framework of StereoCrafter</h2>
-          <img width='90%' src="static/images/framework_v1.png"/>
+          <img width='90%' src="static/images/flowmap.png"/>
           <p style="color:black;text-align:justify">
-            Overall framework of StereoCrafter, which contains two main stages. 
-            In the first stage, the video depth is estimated from the monocular video and we obtain the warped video and its occlusion mask through depth-based video splatting with the left video and the video depth as input. 
-            Then, we train a stereo video inpainting model to fill in the hole region of the warped video according to the occlusion mask to synthesize the right video.
-            </p>
+          Overview of the proposed method, given left view video, the target view video is rendered, encoded, and concatenated with multi-frame noise, followed by the denoising U-Net architecture (i.e., SVD).
+          The reference view images are fed into RefinerNet, through which the spatial features are extracted. The temporal interaction learning module integrates the latent features from long-temporal frames, and the deviation strength is projected as positional embedding and added to the time step embedding. 
+          Finally, the variational autoencoder decoder decodes the result into a video clip.
+          </p>
         </div>
         </div>
       </div>
