--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           <div class="container">
 <!--             <img width="55%" style="display: block; margin:0 auto" src="static/images/logo.png"/> -->
             <h1 class="is-1 publication-title" style="text-align: center;">
-               <span style="text-shadow: 10px 0px 5px blue;font-size: 150%;"> 
+               <span style="text-shadow: 10px 0px 5px cyan;font-size: 150%;"> 
                  <span style="color:red;opacity:0.5">SpatialDreamer</span>
                </span> 
                 <br>
