--- a/index.html
+++ b/index.html
@@ -247,10 +247,10 @@
         <div class="hero-body" >
         <div class="container">
           <h2 class="title is-2">Dataset Construction</h2>
-          <img width='100%' src="static/images/dataset.png"/>
+          <img width='100%' src="static/images/dvg.jpeg"/>
           <p style="color:black;text-align:justify">
-            The pipeline of our approach for constructing the training dataset. After curating a large number of stereo videos, we generate the video depth/disparity, warped left video, and occlusion mask for each data sample, while using the right video as the ground truth.
-            </p>
+          DVG. The temporal motion can be utilized to refine the occluded regions in the current frame, thereby providing smoother images and more consistent occlusion in the temporal sequence.
+          </p>
         </div>
         </div>
       </div>
