--- a/index.html
+++ b/index.html
@@ -215,16 +215,15 @@
       </div>
 
 
-      <div class="section" id="section5">
+      <div class="section" id="section2">
         <div class="hero-body" >
         <div class="container">
           <h2 class="title is-2"> Brief Introduction</h2>
-<!--           <img width='90%' src="static/images/teaser_v1.png"/> -->
         <div class="hero-body is-centered">
           <div class="width: 960px; margin:200px;">
           <table style="color:#000;font-size:25px; margin:0 auto">
             <tr>
-              <td width="66%">
+           <td width="66%">
               <video style='width:100%' loop="true" autoplay="autoplay" loop muted data-autoplay playsinline>
                 <source src="static/home_page_video/22_dogskateboarder_left.mp4">
               </video>
@@ -234,6 +233,7 @@
              <img width='90%' src="static/images/teaser_v1.png"/>
             </td>
             </tr>
+           </table>
         </div>
         </div>
 
