--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
       <div class="media-container" style="display: flex; align-items: center; gap: 2rem; margin-top: 2rem; margin-bottom: 2rem;">
         <!-- 视频容器 -->
         <div class="video-wrapper" style="flex: 0 0 66%; max-width: 66%;">
-          <video style="width: 100%; height: auto;" autoplay="autoplay" loop muted data-autoplay playsinline>
+          <video style="width: 100%; height: auto;" autoplay loop muted playsinline>
             <source src="static/home_page_video/22_dogskateboarder_left.mp4" type="video/mp4">
           </video>
         </div>
