--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
     </div>
 
       <div class="section" id="section5">
-        <div class="hero-body" >
+      <div class="hero-body is-centered">
         <div class="container">
           <h2 class="title is-2">Overview of SpatialDreamer</h2>
           <img width='80%' src="static/images/flowmap.jpeg"/>
@@ -297,7 +297,7 @@
       </div>
       
       <div class="section" id="section5">
-        <div class="hero-body" >
+      <div class="hero-body is-centered">
         <div class="container">
           <h2 class="title is-2">Dataset Construction</h2>
           <img width='80%' src="static/images/dvg.jpeg"/>
