--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
       <div class="hero-body is-centered">
         <div class="container">
           <h2 class="title is-2">Overview of SpatialDreamer</h2>
-          <img width='80%' src="static/images/flowmap.jpeg"/>
+          <img width='80%' src="static/images/flowmap.jpeg" style="display: block; margin: 0 auto 30px auto;"  />
           <p style="color:black;text-align:justify">
           Given left view video, the target view video is rendered, encoded, and concatenated with multi-frame noise, followed by the denoising U-Net architecture (i.e., SVD).
           The reference view images are fed into RefinerNet, through which the spatial features are extracted. The temporal interaction learning module integrates the latent features from long-temporal frames, and the deviation strength is projected as positional embedding and added to the time step embedding. 
