--- a/index.html
+++ b/index.html
@@ -733,7 +733,7 @@
       <div class="hero-body">
       <div class="container is-max-desktop">
         <h2 class="title is-2">Citations</h2>
-        <pre><code>@article{lv2024spatialdreamerselfsupervisedstereovideo,
+        <pre><code>@article{2024spatialdreamer,
             author      = {Zhen Lv, Yangqi Long, Congzhentao Huang, Cao Li, Chengfei Lv<sup>*</sup>, Hao Ren and Dian Zheng},
             title       = {SpatialDreamer: Self-supervised Stereo Video Synthesis from Monocular Input},
             journal     = {arXiv preprint arXiv:2411.11934},
