--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
             playsinline 
             data-autoplay
           >
-            <source src="static/home_page_video/22_dogskateboarder_left.mp4" type="video/mp4">
+            <source src="static/videos/output_318.mp4" type="video/mp4">
             您的浏览器不支持视频播放。
           </video>
         </td>
@@ -264,7 +264,7 @@
         <!-- 图片列（33% 宽度） -->
         <td width="50%" valign="top" style="padding-left: 20px;">
           <img 
-            src="static/images/teaser_v1.png" 
+            src="static/images/cover.jpeg" 
             alt="Teaser Image" 
             style="width: 100%; height: auto; display: block;"
           >
