--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
     >
       <tr>
         <!-- 视频列（66% 宽度） -->
-        <td width="50%" valign="top" style="padding-right: 20px;">
+        <td width="50%" valign="middle" style="padding-right: 20px;">
           <video 
             style="width: 100%; height: auto;" 
             loop 
@@ -262,7 +262,7 @@
         </td>
 
         <!-- 图片列（33% 宽度） -->
-        <td width="50%" valign="top" style="padding-left: 20px;">
+        <td width="50%" valign="middle" style="padding-left: 20px;">
           <img 
             src="static/images/cover.jpeg" 
             alt="Teaser Image" 
