--- a/index.html
+++ b/index.html
@@ -249,8 +249,7 @@
         <!-- 视频列（50% 宽度） -->
         <td 
           width="50%" 
-          style="padding-right: 20px; vertical-align: middle; text-align: center;" <!-- 直接使用 CSS 对齐 -->
-        >
+          style="padding-right: 20px; vertical-align: middle; text-align: center;"
           <video 
             style="max-width: 100%; height: auto; display: inline-block; vertical-align: middle;" 
             loop 
