--- a/index.html
+++ b/index.html
@@ -238,20 +238,18 @@
         </div> -->
           
 <div class="hero-body is-centered">
-  <div style="width: 1280px; margin: 0 auto 50px auto; padding: 0; text-align: center;"> <!-- 添加 text-align: center -->
+  <div style="max-width: 1280px; margin: 0 auto; padding: 0;">
     <table 
       border="0" 
       cellpadding="0" 
       cellspacing="0" 
       style="width: 100%; color: #000; font-size: 25px; border-collapse: collapse;"
     >
-      <tr style="vertical-align: middle; height: 100%;"> <!-- 增加垂直对齐和高度 -->
-        <!-- 视频列（50% 宽度） -->
-        <td 
-          width="50%" 
-          style="padding-right: 20px; vertical-align: middle; text-align: center;"
+      <!-- 第一行：视频 -->
+      <tr style="vertical-align: middle; text-align: center;">
+        <td colspan="2" style="padding-bottom: 20px; text-align: center;">
           <video 
-            style="max-width: 100%; height: auto; display: inline-block; vertical-align: middle;" 
+            style="max-width: 80%; height: auto; display: inline-block; vertical-align: middle;" 
             loop 
             muted 
             autoplay 
@@ -262,22 +260,22 @@
             您的浏览器不支持视频播放。
           </video>
         </td>
+      </tr>
 
-        <!-- 图片列（50% 宽度） -->
-        <td 
-          width="50%" 
-          style="padding-left: 20px; vertical-align: middle; text-align: center;"
-        >
+      <!-- 第二行：图片 -->
+      <tr style="vertical-align: middle; text-align: center;">
+        <td colspan="2" style="padding-top: 20px; text-align: center;">
           <img 
             src="static/images/cover.jpeg" 
             alt="Teaser Image" 
-            style="max-width: 100%; height: auto; display: inline-block; vertical-align: middle;"
+            style="max-width: 80%; height: auto; display: inline-block; vertical-align: middle;"
           >
         </td>
       </tr>
     </table>
   </div>
 </div>
+
 
 
 
