--- a/index.html
+++ b/index.html
@@ -167,7 +167,8 @@
                         <div class="publication-links">
                              <!-- Arxiv PDF link -->
                           <span class="link-block">
-                            <a href="https://stereocrafter.github.io/static/pdfs/StereoCrafter_report.pdf" target="_blank" class="external-link ">
+                            <a 
+<!--                               href="https://stereocrafter.github.io/static/pdfs/StereoCrafter_report.pdf" target="_blank" class="external-link "> -->
                             <span class="icon">
                               <i class="fas fa-file-pdf"></i>
                             </span>
@@ -177,7 +178,8 @@
 
                       <!-- Github link -->
                       <span class="link-block">
-                        <a href="https://github.com/TencentARC/StereoCrafter" target="_blank" class="external-link ">
+                        <a 
+<!--                           href="https://github.com/TencentARC/StereoCrafter" target="_blank" class="external-link "> -->
                         <span class="icon">
                           <i class="fab fa-github"></i>
                         </span>
@@ -187,7 +189,8 @@
 
                     <!-- ArXiv abstract Link -->
                     <span class="link-block">
-                      <a href="https://arxiv.org/abs/2409.07447" target="_blank"
+                      <a 
+<!--                         href="https://arxiv.org/abs/2409.07447" target="_blank" -->
                       class="external-link ">
                       <span class="icon">
                         <i class="ai ai-arxiv"></i>
@@ -197,7 +200,8 @@
                   </span>
 
                   <span class="link-block">
-                    <a href="https://github.com/stereocrafter/stereocrafter.github.io/releases" target="_blank"
+                    <a 
+<!--                       href="https://github.com/stereocrafter/stereocrafter.github.io/releases" target="_blank" -->
                     class="external-link ">
                     <span class="icon">
                       <i class="far fa-images"></i>
@@ -702,7 +706,7 @@
     </div>
 
 
-      <div class="section" id="section1">
+<!--       <div class="section" id="section1">
         <div class="myVideo-overlap" style="background-color: rgba(0, 0, 0, 0.1);" >
         </div>
         <video class="myVideo" loop muted data-autoplay playsinline>
@@ -730,7 +734,7 @@
             <a style="color:white; font-weight:700"  href="https://github.com/stereocrafter/stereocrafter.github.io/releases/download/V0.0.1/visionpro_full.mp4" target="_blank" download> [Click here to download High-Resolution Video ↓] </a>
           </div>
           </div>
-      </div>
+      </div> -->
 
 
     <div class="section" id="section3">
