--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                              <!-- Arxiv PDF link -->
                           <span class="link-block">
                             <a 
-<!--                               href="https://stereocrafter.github.io/static/pdfs/StereoCrafter_report.pdf" target="_blank" class="external-link "> -->
+                              href="" target="_blank" class="external-link ">
                             <span class="icon">
                               <i class="fas fa-file-pdf"></i>
                             </span>
@@ -179,7 +179,7 @@
                       <!-- Github link -->
                       <span class="link-block">
                         <a 
-<!--                           href="https://github.com/TencentARC/StereoCrafter" target="_blank" class="external-link "> -->
+                          href="" target="_blank" class="external-link ">
                         <span class="icon">
                           <i class="fab fa-github"></i>
                         </span>
@@ -190,7 +190,7 @@
                     <!-- ArXiv abstract Link -->
                     <span class="link-block">
                       <a 
-<!--                         href="https://arxiv.org/abs/2409.07447" target="_blank" -->
+                        href="" target="_blank"
                       class="external-link ">
                       <span class="icon">
                         <i class="ai ai-arxiv"></i>
@@ -201,7 +201,7 @@
 
                   <span class="link-block">
                     <a 
-<!--                       href="https://github.com/stereocrafter/stereocrafter.github.io/releases" target="_blank" -->
+                      href="" target="_blank"
                     class="external-link ">
                     <span class="icon">
                       <i class="far fa-images"></i>
