--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                   <span class="author-block">
                     <a href="https://scholar.google.com.hk/citations?user=x38N1hcAAAAJ&hl=en" target="_blank">Zhen Lv</a></span>
                     <span class="author-block">
-                      <a target="_blank">Yangqi Long</a></span>
+                      <a href="https://longyangqi.github.io/" target="_blank">Yangqi Long</a></span>
                       <span class="author-block">
                         <a target="_blank">Congzhentao Huang</a></span>
                       <span class="author-block">
