--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                     <!-- ArXiv abstract Link -->
                     <span class="link-block">
                       <a 
-                        href="" target="_blank"
+                        href="https://arxiv.org/abs/2411.11934" target="_blank"
                       class="external-link ">
                       <span class="icon">
                         <i class="ai ai-arxiv"></i>
@@ -324,7 +324,14 @@
           <div class="width: 960px; margin:200px;">
           <h2 class="title is-2">Results </h2>
           <table style="color:#000;font-size:25px; margin:0 auto">
-            <tr>
+             <tr width="100%>
+              <video style='width:100%' loop="true" autoplay="autoplay" loop muted data-autoplay playsinline>
+                <source src="static/home_page_video/22_dogskateboarder_left.mp4">
+              </video>
+              &nbsp;&nbsp;
+            </tr>
+            
+<!--             <tr>
               <td width="33%">
               <video style='width:100%' loop="true" autoplay="autoplay" loop muted data-autoplay playsinline>
                 <source src="static/home_page_video/22_dogskateboarder_left.mp4">
@@ -342,8 +349,8 @@
                 <source src="static/home_page_video/22_dogskateboarder_anaglyph.mp4">
               </video>
             </td>
-            </tr>
-            <tr>
+            </tr> -->
+<!--             <tr>
               <td align="center">
                 <b>Input Video (Left View)</b>
               </td>
@@ -353,8 +360,8 @@
               <td align="center">
                 <b>Generated Video (Anaglyph 3D)</b>
               </td>
-              </tr>
-              <tr><td height="50px"></td></tr>
+              </tr> -->
+<!--               <tr><td height="50px"></td></tr>
               <tr>
                   <td colspan="3" align="center">
                   Download-able Content for experience: &nbsp;&nbsp;
@@ -369,13 +376,13 @@
   <path d="M12 7c1.143 0 2.235 .035 3.275 .104c1.017 .068 1.95 .207 2.798 .42c.813 .203 1.52 .505 2.119 .909a3.903 3.903 0 0 1 1.328 1.531c.326 .657 .48 1.48 .48 2.466c0 1.006 -.189 1.91 -.574 2.707c-.375 .779 -.886 1.396 -1.537 1.848a3.696 3.696 0 0 1 -2.16 .66c-.509 0 -.97 -.068 -1.382 -.21a5.84 5.84 0 0 1 -1.17 -.548a18.45 18.45 0 0 1 -1.045 -.695a9.104 9.104 0 0 0 -1.001 -.63a2.376 2.376 0 0 0 -1.13 -.301c-.373 0 -.75 .097 -1.132 .3c-.316 .17 -.65 .38 -1 .63c-.322 .23 -.67 .462 -1.047 .695a5.78 5.78 0 0 1 -1.168 .548c-.413 .142 -.872 .21 -1.378 .21a3.706 3.706 0 0 1 -2.165 -.659c-.651 -.452 -1.162 -1.07 -1.537 -1.848c-.385 -.798 -.574 -1.7 -.574 -2.709c-.004 -.98 .15 -1.802 .477 -2.46a3.897 3.897 0 0 1 1.33 -1.531c.6 -.403 1.307 -.704 2.12 -.907a16.088 16.088 0 0 1 2.8 -.423c1.04 -.071 2.13 -.107 3.273 -.107z" />
 </svg>&nbsp;[VisionPro Format] </a>
                 </td>
-                </tr>
+                </tr> -->
           </table>
         </div>
         </div>
       </div>
 
-      <div class="slide">
+<!--       <div class="slide">
         <div class="hero-body is-centered">
           <div class="width: 1200px; margin:200px;">
           <h2 class="title is-2">Results </h2>
@@ -646,10 +653,10 @@
           </table>
         </div>
         </div>
-      </div>
+      </div> -->
 
 
-      <div class="slide">
+<!--       <div class="slide">
         <div class="hero-body is-centered">
           <div class="width: 100%; margin:200px;">
           <h2 class="title is-2">Results </h2>
@@ -701,7 +708,7 @@
           </table>
         </div>
         </div>
-      </div>
+      </div> -->
 
     </div>
 
