--- a/index.html
+++ b/index.html
@@ -324,12 +324,31 @@
           <div class="width: 960px; margin:200px;">
           <h2 class="title is-2">Results </h2>
           <table style="color:#000;font-size:25px; margin:0 auto">
-             <tr width="100%>
+             <tr width="100%">
               <video style='width:100%' loop="true" autoplay="autoplay" loop muted data-autoplay playsinline>
                 <source src="static/home_page_video/22_dogskateboarder_left.mp4">
               </video>
               &nbsp;&nbsp;
             </tr>
+          </table>
+        </div>
+        </div>
+      </div>
+        <div class="slide">
+        <div class="hero-body is-centered">
+          <div class="width: 960px; margin:200px;">
+          <h2 class="title is-2">Results </h2>
+          <table style="color:#000;font-size:25px; margin:0 auto">
+             <tr width="100%">
+              <video style='width:100%' loop="true" autoplay="autoplay" loop muted data-autoplay playsinline>
+                <source src="static/home_page_video/22_dogskateboarder_right.mp4">
+              </video>
+              &nbsp;&nbsp;
+            </tr>
+          </table>
+        </div>
+        </div>
+      </div>
             
 <!--             <tr>
               <td width="33%">
@@ -377,10 +396,10 @@
 </svg>&nbsp;[VisionPro Format] </a>
                 </td>
                 </tr> -->
-          </table>
+<!--           </table>
         </div>
         </div>
-      </div>
+      </div> -->
 
 <!--       <div class="slide">
         <div class="hero-body is-centered">
