--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
           <table style="color:#000;font-size:25px; margin:0 auto">
              <tr width="100%">
               <video style='width:100%' loop="true" autoplay="autoplay" loop muted data-autoplay playsinline>
-                <source src="static/home_page_video/22_dogskateboarder_left.mp4">
+                <source src="static/videos/sbs_408516288714_new_2600.mp4">
               </video>
               &nbsp;&nbsp;
             </tr>
@@ -341,7 +341,37 @@
           <table style="color:#000;font-size:25px; margin:0 auto">
              <tr width="100%">
               <video style='width:100%' loop="true" autoplay="autoplay" loop muted data-autoplay playsinline>
-                <source src="static/home_page_video/22_dogskateboarder_right.mp4">
+                <source src="static/videos/sbs_438225530558_new_2600.mp4">
+              </video>
+              &nbsp;&nbsp;
+            </tr>
+          </table>
+        </div>
+        </div>
+      </div>
+        <div class="slide">
+        <div class="hero-body is-centered">
+          <div class="width: 960px; margin:200px;">
+          <h2 class="title is-2">Results </h2>
+          <table style="color:#000;font-size:25px; margin:0 auto">
+             <tr width="100%">
+              <video style='width:100%' loop="true" autoplay="autoplay" loop muted data-autoplay playsinline>
+                <source src="static/videos/sbs_434679849541_new_2600.mp4">
+              </video>
+              &nbsp;&nbsp;
+            </tr>
+          </table>
+        </div>
+        </div>
+      </div>
+        <div class="slide">
+        <div class="hero-body is-centered">
+          <div class="width: 960px; margin:200px;">
+          <h2 class="title is-2">Results </h2>
+          <table style="color:#000;font-size:25px; margin:0 auto">
+             <tr width="100%">
+              <video style='width:100%' loop="true" autoplay="autoplay" loop muted data-autoplay playsinline>
+                <source src="static/videos/sbs_443262255830_new_2600.mp4">
               </video>
               &nbsp;&nbsp;
             </tr>
