--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-  <title> StereoCrafter </title>
+  <title> SpatialDreamer </title>
   <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
   rel="stylesheet">
@@ -223,23 +223,6 @@
         <div class="hero-body" >
         <div class="container">
           <h2 class="title is-2"> Brief Introduction</h2>
-<!--         <div class="hero-body is-centered">
-          <div class="width: 960px; margin:200px;">
-          <table style="color:#000;font-size:25px; margin:0 auto">
-            <tr>
-           <td width="66%">
-              <video style='width:100%' loop="true" autoplay="autoplay" loop muted data-autoplay playsinline>
-                <source src="static/home_page_video/22_dogskateboarder_left.mp4">
-              </video>
-              &nbsp;&nbsp;
-            </td>
-            <td width="33%">
-             <img width='90%' src="static/images/teaser_v1.png"/>
-            </td>
-            </tr>
-           </table>
-        </div>
-        </div> -->
           
 <div class="hero-body is-centered">
   <div style="max-width: 1280px; margin: 0 auto; padding: 0;">
@@ -760,37 +743,6 @@
       </div> -->
 
     </div>
-
-
-<!--       <div class="section" id="section1">
-        <div class="myVideo-overlap" style="background-color: rgba(0, 0, 0, 0.1);" >
-        </div>
-        <video class="myVideo" loop muted data-autoplay playsinline>
-          <source src="static/videos/freeview.mp4" type="video/mp4">
-          <source src="imgs/flowers.webm" type="video/webm">
-        </video>
-          <div class="hero-body" style="position:absolute;top:0; z-index:999">
-          <div class="container">
-            <h2 style="color:white" class="title is-2"> More Demo: Free View Rendering from Monocular Video  </h2>
-            <a style="color:white; font-weight:700"  href="https://github.com/stereocrafter/stereocrafter.github.io/releases/download/V0.0.1/freeview_full.mp4" target="_blank" download> [Click here to download High-Resolution Video ↓] </a>
-          </div>
-          </div>
-      </div>
-
-      <div class="section" id="section1">
-        <div class="myVideo-overlap" style="background-color: rgba(0, 0, 0, 0.1);" >
-        </div>
-        <video class="myVideo" loop muted data-autoplay playsinline>
-          <source src="static/videos/visionpro.mp4" type="video/mp4">
-          <source src="imgs/flowers.webm" type="video/webm">
-        </video>
-          <div class="hero-body" style="position:absolute;top:0; z-index:999">
-          <div class="container">
-            <h2 style="color:white" class="title is-2"> More Demo: Watching the Generated Stereo Videos in Vision Pro</h2>
-            <a style="color:white; font-weight:700"  href="https://github.com/stereocrafter/stereocrafter.github.io/releases/download/V0.0.1/visionpro_full.mp4" target="_blank" download> [Click here to download High-Resolution Video ↓] </a>
-          </div>
-          </div>
-      </div> -->
 
 
     <div class="section" id="section3">
