--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                   <!-- Paper authors -->
                    <br/>
                   <span class="author-block">
-                    <a href="https://scholar.google.com.hk/citations?user=x38N1hcAAAAJ&hl=en" target="_blank">Zhen Lv</a></span>
+                    <a href="https://lvzic.github.io/website/" target="_blank">Zhen Lv</a></span>
                     <span class="author-block">
                       <a href="https://longyangqi.github.io/" target="_blank">Yangqi Long</a></span>
                       <span class="author-block">
