--- a/index.html
+++ b/index.html
@@ -362,6 +362,21 @@
         </div>
         </div>
       </div>
+
+    <div class="section" id="section1">
+        <div class="myVideo-overlap" style="background-color: rgba(0, 0, 0, 0.1);" >
+        </div>
+        <video class="myVideo" loop muted data-autoplay playsinline>
+          <source src="static/videos/lldq_4k_sub.mp4" type="video/mp4">
+          <source src="imgs/flowers.webm" type="video/webm">
+        </video>
+          <div class="hero-body" style="position:absolute;top:0; z-index:999">
+          <div class="container">
+            <h2 style="color:white" class="title is-2"> More Demo: The Wandering Earth</h2>
+            <a style="color:white; font-weight:700"  href="https://github.com/spatialdreamer/spatialdreamer.github.io/blob/main/static/videos/lldq_4k_sbs_sub_.mp4" target="_blank" download> [Click here to download Side by Side High-Resolution Video ↓] </a>
+          </div>
+          </div>
+    </div>
             
 <!--             <tr>
               <td width="33%">
