--- a/index.html
+++ b/index.html
@@ -755,6 +755,7 @@
         <div class="container">
         <h2 style="color:white" class="title is-2"> More Demo: The Wandering Earth</h2>
         <a style="color:white; font-weight:700"  href="https://github.com/spatialdreamer/spatialdreamer.github.io/blob/main/static/videos/lldq_4k_sbs_sub_.mp4" target="_blank" download> [Click here to download Side by Side High-Resolution Video ↓] </a>
+        <a style="color:white; font-weight:700"  href="https://github.com/spatialdreamer/spatialdreamer.github.io/blob/main/static/videos/demo_.mp4" target="_blank" download> [Click here to download Side by Side High-Resolution Video ↓] </a>
         </div>
         </div>
     </div>
