--- a/index.html
+++ b/index.html
@@ -754,8 +754,8 @@
         <div class="hero-body" style="position:absolute;top:0; z-index:999">
         <div class="container">
         <h2 style="color:white" class="title is-2"> More Demo: The Wandering Earth</h2>
-        <a style="color:white; font-weight:700"  href="https://github.com/spatialdreamer/spatialdreamer.github.io/blob/main/static/videos/lldq_4k_sbs_sub_.mp4" target="_blank" download> [Click here to download Side by Side High-Resolution Video ↓] </a>
-        <a style="color:white; font-weight:700"  href="https://github.com/spatialdreamer/spatialdreamer.github.io/blob/main/static/videos/demo_.mp4" target="_blank" download> [Click here to download Side by Side High-Resolution Video ↓] </a>
+        <a style="color:white; font-weight:700"  href="https://raw.githubusercontent.com/spatialdreamer/spatialdreamer.github.io/main/static/videos/lldq_4k_sbs_sub_.mp4" target="_blank" download> [Click here to download Side by Side High-Resolution Video ↓] </a>
+        <a style="color:white; font-weight:700"  href="https://raw.githubusercontent.com/spatialdreamer/spatialdreamer.github.io/main/static/videos/demo_.mp4" target="_blank" download> [Click here to download Side by Side High-Resolution Video ↓] </a>
         </div>
         </div>
     </div>
@@ -770,7 +770,7 @@
             author      = {Zhen Lv, Yangqi Long, Congzhentao Huang, Cao Li, Chengfei Lv<sup>*</sup>, Hao Ren and Dian Zheng},
             title       = {SpatialDreamer: Self-supervised Stereo Video Synthesis from Monocular Input},
             journal     = {arXiv preprint arXiv:2411.11934},
-            year        = {2024}
+            year        = {2025}
            }</code></pre>
         <p style="color: black; margin-top: 50px">
           This page was built using the <a  style="color: black;" href="https://github.com/vinthony/project-page-template">modification version</a> of <a style="color: black;" href="https://github.com/eliahuhorwitz/Academic-project-page-template" target="_blank">Academic Project Page Template</a> from <a style="color: black;" href="https://github.com/vinthony">vinthony</a>.
