--- a/index.html
+++ b/index.html
@@ -199,9 +199,8 @@
                     </a>
                   </span>
 
-                  <span class="link-block">
-                    <a 
-                      href="" target="_blank"
+                 <span class="link-block">
+                    <a href="https://raw.githubusercontent.com/spatialdreamer/spatialdreamer.github.io/main/static/videos/demo_.mp4" target="_blank"
                     class="external-link ">
                     <span class="icon">
                       <i class="far fa-images"></i>
@@ -755,7 +754,7 @@
         <div class="container">
         <h2 style="color:white" class="title is-2"> More Demo: The Wandering Earth</h2>
         <a style="color:white; font-weight:700"  href="https://raw.githubusercontent.com/spatialdreamer/spatialdreamer.github.io/main/static/videos/lldq_4k_sbs_sub_.mp4" target="_blank" download> [Click here to download Side by Side High-Resolution Video ↓] </a>
-        <a style="color:white; font-weight:700"  href="https://raw.githubusercontent.com/spatialdreamer/spatialdreamer.github.io/main/static/videos/demo_.mp4" target="_blank" download> [Click here to download Side by Side High-Resolution Video ↓] </a>
+<!--         <a style="color:white; font-weight:700"  href="https://raw.githubusercontent.com/spatialdreamer/spatialdreamer.github.io/main/static/videos/demo_.mp4" target="_blank" download> [Click here to download Side by Side High-Resolution Video ↓] </a> -->
         </div>
         </div>
     </div>
